tests/tests/legacy_kustomizations/jupyter-web-app/test_data/expected/apps_v1_deployment_jupyter-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jupyter-web-app
    app.kubernetes.io/component: jupyter-web-app
    app.kubernetes.io/instance: jupyter-web-app-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: jupyter-web-app
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: jupyter-web-app
  name: jupyter-web-app-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-web-app
      app.kubernetes.io/component: jupyter-web-app
      app.kubernetes.io/instance: jupyter-web-app-v1.0.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: jupyter-web-app
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v1.0.0
      kustomize.component: jupyter-web-app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: jupyter-web-app
        app.kubernetes.io/component: jupyter-web-app
        app.kubernetes.io/instance: jupyter-web-app-v1.0.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: jupyter-web-app
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v1.0.0
        kustomize.component: jupyter-web-app
    spec:
      containers:
      - env:
        - name: ROK_SECRET_NAME
          valueFrom:
            configMapKeyRef:
              key: ROK_SECRET_NAME
              name: jupyter-web-app-parameters
        - name: UI
          valueFrom:
            configMapKeyRef:
              key: UI
              name: jupyter-web-app-parameters
        - name: USERID_HEADER
          value: X-Goog-Authenticated-User-Email
        - name: USERID_PREFIX
          value: 'accounts.google.com:'
        image: uhub.service.ucloud.cn/a4x-kubeflow/kubeflow-images-public/jupyter-web-app:vmaster-g845af298
        imagePullPolicy: Always
        name: jupyter-web-app
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
      serviceAccountName: jupyter-web-app-service-account
      volumes:
      - configMap:
          name: jupyter-web-app-jupyter-web-app-config
        name: config-volume
