tests/tests/legacy_kustomizations/jupyter-web-app/test_data/expected/networking.istio.io_v1alpha3_virtualservice_jupyter-web-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/component: jupyter-web-app
    app.kubernetes.io/instance: jupyter-web-app-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: jupyter-web-app
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
  name: jupyter-web-app
  namespace: kubeflow
spec:
  gateways:
  - istio-system/kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /jupyter
    match:
    - uri:
        prefix: /jupyter/
    rewrite:
      uri: /
    route:
    - destination:
        host: jupyter-web-app-service.kubeflow.svc.cluster.local
        port:
          number: 80
