tests/tests/legacy_kustomizations/jupyter-web-app/test_data/expected/~g_v1_service_jupyter-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: webapp_mapping
      prefix: /jupyter/
      service: jupyter-web-app-service.kubeflow
      add_request_headers:
        x-forwarded-prefix: /jupyter
  labels:
    app: jupyter-web-app
    app.kubernetes.io/component: jupyter-web-app
    app.kubernetes.io/instance: jupyter-web-app-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: jupyter-web-app
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: jupyter-web-app
    run: jupyter-web-app
  name: jupyter-web-app-service
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: jupyter-web-app
    app.kubernetes.io/component: jupyter-web-app
    app.kubernetes.io/instance: jupyter-web-app-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: jupyter-web-app
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: jupyter-web-app
  type: ClusterIP
